# GVL-00

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
cmake/: target.cmake
ext/git++/: LibGit++.cmake
ext/git++/src/: GitCommit.cpp  GitCommit.hpp  GitRepository.cpp
ext/git++/src/git++/: GitCommit.cpp  GitCommit.hpp  GitCore.cpp  GitCore.hpp  GitRepository.cpp  GitRepository.hpp
lib/git++/: LibGit++.cmake
lib/git++/include/git++/: GitCore.hpp
lib/git++/src/: GitCommit.cpp  GitCore.cpp  GitRepository.cpp
src/: main.cpp  viewer.cmake
